--- a/Calculator_v1.0/app/src/main/res/values/strings.xml
+++ b/Calculator_v1.0/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="equals">=</string>
     <string name="plus">+</string>
     <string name="clear">Clear</string>
-    <string name="backspace">b-space</string>
+    <string name="backspace">◄</string>
     <string name="divide_by_zero_err">Divide by zero is not allowed</string>
 </resources>
