feat: design updated

--- a/TicTacToe_v1.0/app/src/main/res/values/strings.xml
+++ b/TicTacToe_v1.0/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Tic-tac-toe v1.0</string>
-    <string name="empty_text"></string>
+    <string name="empty_text"> </string>
     <string name="set_first_player_name">Enter the name of the first player</string>
     <string name="set_second_player_name">Enter the name of the second player</string>
     <string name="start">Start Game</string>
@@ -10,5 +10,7 @@
     <string name="reset_game">Reset</string>
     <string name="exit">Exit</string>
     <string name="restart">Restart</string>
+    <string name="your_turn">Your turn, %1$s</string>
     <string name="draw">draw!  ¯\\_(ツ)_/¯</string>
+    <string name="_0">0</string>
 </resources>
